corrected background images

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./public/styles/base.css">
-  <link rel="stylesheet" href="./public/styles/card.css">
+  <link rel="stylesheet" href="./assets/styles/base.css">
+  <link rel="stylesheet" href="./assets/styles/card.css">
   
   <title>Frontend Mentor | Profile card component</title>
 
@@ -19,12 +19,10 @@
   </style>
 </head>
 <body>
-  <img src="./public/images/bg-pattern-top.svg" alt="Bg Pattern Top" class="bg-pattern-top">
-
   <div class="card">
-    <img src="./public/images/bg-pattern-card.svg" alt="Bg Pattern Card" class="card__img">
+    <img src="./assets/images/bg-pattern-card.svg" alt="Bg Pattern Card" class="card__img">
     <div class="card__profile">
-      <img src="./public/images/image-victor.jpg" alt="" class="card__profile__img">
+      <img src="./assets/images/image-victor.jpg" alt="" class="card__profile__img">
       <h2><strong>Victor Crest</strong> <span>26</span></h2>
       <p>London</p>
     </div>
@@ -46,8 +44,6 @@
       </div>
     </div>
   </div>
-
-  <img src="./public/images/bg-pattern-bottom.svg" alt="Bg Pattern Bottom" class="bg-pattern-bottom">
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
